<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sponbook</string>
    <string name="edit_ID">ID를 입력하세요.</string>
    <string name="edit_password">PW를 입력하세요.</string>
    <string name="edit_group_name">단체이름을 입력하세요.</string>
    <string name="edit_phone_number">전화번호를 입력하세요.</string>
    <string name="edit_number_of_member">단체 인원수를 입력하세요.</string>
    <string name="button_signup">가입</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sponsors">sponsors</string>
    <string name="makeID">Sign Up</string>
    <string name="login">Log In</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_signup">SignUpActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_activity2">Main2Actiivty</string>
    <string name="mypage">My Page</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_mypage">Mypage</string>
    <string name="hutwater">MT 다음날, 머리 아플때 다같이 헛개수!</string>
    <string name="likefirst">우리 만남도 마치 처음처럼~</string>
    <string name="title_activity_ask_sponsorship">AskSponsorship</string>
    <string name="title_activity_ask_sponsorship2">AskSponsorship2</string>

</resources>
