<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_sponsors"
    android:orientation="vertical"
    android:background="#ffffff"
    android:gravity="top">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logIn"/>

        <Button
            android:id="@+id/makeID"
            android:text="@string/makeID"
            android:onClick="makeID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ScrollView android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="18dp"
                android:text="@string/hutwater"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hutwater"
                android:adjustViewBounds="true"
                android:layout_margin="10dp"/>

                <ImageView android:id="@+id/spon_button_hutwater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="15dp"
                    android:onClick="selectSpon"
                    android:src="@drawable/ask_spon"/>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textSize="18dp"
                android:text="@string/likefirst"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/likefirst"
                    android:adjustViewBounds="true"
                    android:layout_margin="10dp" />

                <ImageView android:id="@+id/spon_button_likefirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="15dp"
                    android:onClick="selectSpon"
                    android:src="@drawable/ask_spon"/>

            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
